--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,12 +1,20 @@
 FROM node:16-alpine
 WORKDIR /app
 
+# Copy package files first
+COPY package*.json ./
+
+# Install dependencies
+RUN npm ci
+
+# Copy the rest of the application code
 COPY . .
 
-RUN npm ci
+# Build the application
 RUN npm run build
 
 ENV NODE_ENV production
 RUN npm install -g serve
 
+EXPOSE 3000
 CMD ["serve", "-s", "build", "-l", "3000"]
