--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16-alpine
 WORKDIR /app
 
 # Copy package files first
-COPY package*.json ./
+COPY package*.json .
 
 # Install dependencies
 RUN npm install
