--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,20 +1,14 @@
 FROM node:16-alpine
 WORKDIR /app
 
-# Copy package files first
-COPY package*.json .
 
-# Install dependencies
+COPY package*.json ./
+
+
 RUN npm install
 
-# Copy the rest of the application code
+
 COPY . .
 
-# Build the application
-RUN npm run build
-
-ENV NODE_ENV production
-RUN npm install -g serve
-
 EXPOSE 3000
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["npm", "start"]
